# WeatherWebApp

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 2025_03_03_2315-ed3278b5940d_init_queries_model.py
src/: main.py
src/api/: __init__.py
src/api/weather/: dao.py  schemas.py  service.py  views.py
src/core/: config.py  db_helper.py
src/core/models/: __init__.py  query.py
