[tool.poetry]
name = "weatherwebapp"
version = "0.1.0"
description = ""
authors = ["MarkCesium <danikhrenkov29@gmail.com>"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.11"
pydantic-settings = "^2.8.1"
sqlalchemy = "^2.0.38"
alembic = "^1.14.1"
orjson = "^3.10.15"
asyncpg = "^0.30.0"
aiohttp = "^3.11.13"
uvicorn = "^0.34.0"
greenlet = "^3.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"

[tool.ruff]
fix = true
line-length = 120
indent-width = 4
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.mypy]
disable_error_code = ["import-untyped"]